2011-06-09  Rudy Neeser  <rudy.neeser@gmail.com>

	* spline.lisp (coefficient-matrix): Made an easy way to find the
	polynomial coefficients that control the shape of the splines /
	curves.

2011-06-08  Rudy Neeser  <rudy.neeser@gmail.com>

	* spline.lisp (evaluate): Performs some error checking to ensure
	that evaluate is not called on a spline with no geometry.

2011-06-07  Rudy Neeser  <rudy.neeser@gmail.com>

	* spline.lisp (matrix-spline): Added a class for splines
	represented using a basis matrix.
	(evaluate): Added a generic method for evaluating splines.
	(spline-geometry): Added a generic method for accessing the
	geometry making up a spline.
	(set-spline-geometry): Sets the geometry making up a spline
	(last-shared-spline): A class that represents splines for which
	each segment shares the last geometry of the previous segment.
	(three-shared-spline): A class that represents splines for which
	each segment shares the last three bits of geometry from the
	previous segment.
	(hermite-curve): A hermite curve class.
	(bezier-curve): A Bézier curve class.
	(unrbs-spline): a uniform, non-rational b-spline class.
	(catmull-rom-spline): A catmull-rom class.
	(maximum-parameter): A method that will return the maximum value
	that a parameter may take.

	* vector.lisp (length): Allowed LENGTH to work on simple arrays.

	* conditions.lisp (spline-geometry-error): Added an error
	condition for spline geometry data.

2011-06-06  Rudy Neeser  <rudy.neeser@gmail.com>

	* spline.lisp (spline): Added a class for managing parametric
	curves.

	* basis.lisp: Added a file and some functions for producing
	standard basis matrices for various parametric curves and splines.

	* *.lisp: Updated copyright date.

2010-11-04  Rudy Neeser  <rudy.neeser@gmail.com>

	* vector.lisp (vector=): Changing the user of lm:- to cl:- speeds
	up code.

2010-11-02  Rudy Neeser  <rudy.neeser@gmail.com>

	* operations.lisp (c+): Added a method so that scalar values can