@@ -1,3 +1,7 @@
+2011-06-20  Rudy Neeser  <rudy.neeser@gmail.com>
+
+	* spline.lisp (evaluate): Some better error reporting.
+
 2011-06-09  Rudy Neeser  <rudy.neeser@gmail.com>
 
 	* spline.lisp (coefficient-matrix): Made an easy way to find the
